examples/kubernetes/052-istio-mutual-tls/devops-istio-mtls-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: devops-blue
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: devops-yellow
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: devops-white
  labels:
    istio-injection: enabled

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops-blue
  name: istio-mtls-deployment-blue
spec:
  selector:
    matchLabels:
      app: istio-mtls-blue
  template:
    metadata:
      labels:
        app: istio-mtls-blue
        version: 1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8111"
        prometheus.io/path: /devops/blue/actuator/prometheus
        sidecar.opentelemetry.io/inject: "otel-sidecar"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
        - name: devops-blue
          image: npantelic/devops-blue:1.0.0
          resources:
            requests:
              cpu: "0.02"
              memory: 32Mi
            limits:
              cpu: "0.3"
              memory: 384Mi
          ports:
            - name: http
              containerPort: 8111
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /devops/blue/actuator/health/readiness
              port: 8111
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /devops/blue/actuator/health/liveness
              port: 8111
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
  replicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops-yellow
  name: istio-mtls-deployment-yellow
spec:
  selector:
    matchLabels:
      app: istio-mtls-yellow
  template:
    metadata:
      labels:
        app: istio-mtls-yellow
        version: 1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8112"
        prometheus.io/path: /devops/yellow/actuator/prometheus
        sidecar.opentelemetry.io/inject: "otel-sidecar"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
        - name: devops-yellow
          image: npantelic/devops-yellow:1.0.0
          resources:
            requests:
              cpu: "0.02"
              memory: 32Mi
            limits:
              cpu: "0.3"
              memory: 384Mi
          ports:
            - name: http
              containerPort: 8112
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /devops/yellow/actuator/health/readiness
              port: 8112
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /devops/yellow/actuator/health/liveness
              port: 8112
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
  replicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops-white
  name: istio-mtls-deployment-white
spec:
  selector:
    matchLabels:
      app: istio-mtls-white
  template:
    metadata:
      labels:
        app: istio-mtls-white
        version: 1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8113"
        prometheus.io/path: /devops/white/actuator/prometheus
        sidecar.opentelemetry.io/inject: "otel-sidecar"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
        - name: devops-white
          image: npantelic/devops-white:1.0.0
          resources:
            requests:
              cpu: "0.02"
              memory: 32Mi
            limits:
              cpu: "0.3"
              memory: 384Mi
          ports:
            - name: http
              containerPort: 8113
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /devops/white/actuator/health/readiness
              port: 8113
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /devops/white/actuator/health/liveness
              port: 8113
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
  replicas: 1

---
apiVersion: v1
kind: Service
metadata:
  namespace: devops-blue
  name: devops-blue-clusterip
  labels:
    app: istio-mtls-blue
spec:
  selector:
    app: istio-mtls-blue
  ports:
    - port: 8111
      name: http

---
apiVersion: v1
kind: Service
metadata:
  namespace: devops-yellow
  name: devops-yellow-clusterip
  labels:
    app: istio-mtls-yellow
spec:
  selector:
    app: istio-mtls-yellow
  ports:
    - port: 8112
      name: http

---
apiVersion: v1
kind: Service
metadata:
  namespace: devops-white
  name: devops-white-clusterip
  labels:
    app: istio-mtls-white
spec:
  selector:
    app: istio-mtls-white
  ports:
    - port: 8113
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devops-blue
  name: ingress-istio-mtls-nginx-blue
  labels:
    app.kubernetes.io/name: ingress-istio-mtls-nginx-blue
  # Need these annotations so istio can work with nginx
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: devops-blue-clusterip.devops-blue.svc.cluster.local
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /devops/blue
            pathType: Prefix
            backend:
              service:
                name: devops-blue-clusterip
                port:
                  number: 8111
